machine learning:knn

--- a/_posts/2016-12-13-KNN.md
+++ b/_posts/2016-12-13-KNN.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: 开篇-测试
+title: 机器学习-KNN算法
 tags:  [博客]
-categories: [博客搭建]
+categories: [机器学习]
 author: liheng
 excerpt: "好记性不如乱笔头"
 ---
