--- a/_posts/2016-12-13-KNN.md
+++ b/_posts/2016-12-13-KNN.md
@@ -1,11 +1,11 @@
 ---
 layout: post
 title: 机器学习-KNN算法
-tags:  [博客]
+tags:  [机器学习]
 categories: [机器学习]
 author: liheng
 excerpt: "好记性不如乱笔头"
 ---
 
-测试博客搭建。
+测试博客搭建。阿萨德发发大水的
 
