--- a/_posts/2016-12-27-git.md
+++ b/_posts/2016-12-27-git.md
@@ -8,6 +8,28 @@ excerpt: "git"
 ---
 ## 介绍
 
+### 基本快照
+
+#### git commit
+
+功能: 将变更保存到目录中
+
+1. git commit -a 当所有曾经缓存(staged)过的文件发生变更或删除时, 使用该条命令
+会将这些文件放入缓存区(staged area), 该命令对新增文件无效
+
+2. git commit -m 不用新打开一个编辑器, 就可以添加提交的相关信息
+
+### 分支
+
+#### git branch
+
+功能: 展示, 创建 和 删除分支功能。具体参数和功能可以 git branch --help
+
+1. 没有参数时, 列出本地的分支.
+2. git branch -d branchName 删除一个分支
+3. git branch -D branchName 强制删除一个分支
+
+
 
 ## 参考文献:
 
