--- a/_posts/2016-12-27-git.md
+++ b/_posts/2016-12-27-git.md
@@ -29,6 +29,11 @@ excerpt: "git"
 2. git branch -d branchName 删除一个分支
 3. git branch -D branchName 强制删除一个分支
 
+#### git merge
+
+功能: 将分支进行合并, 具体参数和功能可以  git merge --help
+
+1. git merge branchB //将branchB 合并到当前分支中, 处理完冲突就可以提交了
 
 
 ## 参考文献:
