add git command

--- a/_posts/2016-12-27-git.md
+++ b/_posts/2016-12-27-git.md
@@ -21,6 +21,13 @@ excerpt: "git"
 
 ### 分支
 
+#### git checkout
+
+功能: 切换到新分支的上下文
+
+1. git checkout branchA
+
+
 #### git branch
 
 功能: 展示, 创建 和 删除分支功能。具体参数和功能可以 git branch --help
@@ -28,6 +35,8 @@ excerpt: "git"
 1. 没有参数时, 列出本地的分支.
 2. git branch -d branchName 删除一个分支
 3. git branch -D branchName 强制删除一个分支
+4. git branch branchName  创建一个分支branchName
+5. git branch -b branchName 创建一个分支branchName, 并切换到该分支下
 
 #### git merge
 
@@ -37,4 +46,7 @@ excerpt: "git"
 
 
 ## 参考文献:
+
+1. https://gitref.org/zh/branching/
+2. https://git-scm.com/book/zh/v2
 
