--- a/_posts/2016-12-27-git.md
+++ b/_posts/2016-12-27-git.md
@@ -45,6 +45,10 @@ excerpt: "git"
 1. git merge branchB //将branchB 合并到当前分支中, 处理完冲突就可以提交了
 
 
+#### git reset
+
+功能:
+
 ## 参考文献:
 
 1. https://gitref.org/zh/branching/
