--- a/_posts/2016-12-27-ActiveMQ.md
+++ b/_posts/2016-12-27-ActiveMQ.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: ActiveMQ入门
+title: ActiveMQ总结
 tags:  [ActiveMQ]
 categories: [中间件]
 author: liheng
@@ -8,6 +8,10 @@ excerpt: "ActiveMQ"
 ---
 ## 介绍
 
+消息中间件
+
+### 消息类型
+1.  
 
 ## 参考文献:
 
