--- a/_posts/2017-3-7-Nginx.md
+++ b/_posts/2017-3-7-Nginx.md
@@ -8,10 +8,113 @@ excerpt: "nginx"
 ---
 ## 介绍
 
-nginx
+### nginx.conf文件
 
-### 消息类型
-1.  
+nginx.conf中的配置信息，根据其逻辑上的意义，对它们进行了分类，也就是分成了多个作用域，或者称之为配置指令上下文。
+不同的作用域含有一个或者多个配置项。
+
+当前nginx支持的几个指令上下文：
+
+1.  main:	nginx在运行时与具体业务功能无关的一些参数，比如工作进程数，运行的身份等。
+
+    ```
+        worker_processes 8; //
+    ```
+    
+2.  http:	与提供http服务相关的一些配置参数。例如：是否使用keepalive啊，是否使用gzip进行压缩等。
+
+    ```
+        access_log //记录哪些用户，哪些页面以及用户浏览器、ip和其他的访问信息
+        error_log //记录服务器错误日志
+        keepalive_timeout // 长链接的超时时间
+        
+        proxy_connect_timeout //
+        proxy_read_timeout //
+        proxy_read_timeout //
+        
+        fastcgi_connect_timeout //
+        fastcgi_send_timeout //
+        fastcgi_read_timeout //
+   ```     
+        
+
+3.  server:	http服务上支持若干虚拟主机。每个虚拟主机一个对应的server配置项，配置项里面包含该虚拟主机相关的配置。
+
+```
+    server {
+    listen                          80;
+    server_name     www.test.com;
+
+    server_tokens                   off;
+    charset                         utf-8;
+    root                            /data;
+
+    location /nginx_status {
+        stub_status                 on;
+        access_log                  off;
+        allow                       10.0.0.0/8;
+        deny                        all;
+    }
+    
+    ...
+```
+    
+4.  location:	http服务中，某些特定的URL对应的一系列配置项。
+
+```
+    location ~ (/material/upload_pic_callback.htm){
+        set $location_group         "paopao_cms_callback"; #this directive must be placed at the first line
+        proxy_pass                  http://paopao_cms_api_callback_jy;
+        proxy_set_header            REMOTE_ADDR $remote_addr;
+        proxy_set_header            Host $host;
+        proxy_set_header            X-Forwarded-For    $remote_addr;
+        proxy_set_header Connection "";
+        limit_req                   zone=java  burst=5 nodelay;
+        proxy_next_upstream         error timeout invalid_header http_500 http_502 http_504;
+        proxy_next_upstream_tries   2;
+        log_by_lua_file             './scripts/collect_stats.lua';#this directive must be placed as the last line
+    }
+    
+    location ~* |/apis/user|/apis/website||/material/(feed/receive.htm|web/receive.htm) {
+        set $location_group         "cms_api"; #this directive must be placed at the first line
+        proxy_pass                  http://paopao_cms_api_jy;
+        proxy_set_header            REMOTE_ADDR $remote_addr;
+        proxy_set_header            Host $host;
+        proxy_set_header            X-Forwarded-For    $remote_addr;
+        proxy_set_header Connection "";
+        limit_req                   zone=java  burst=5 nodelay;
+        proxy_next_upstream         error timeout invalid_header http_500 http_502 http_504;
+        proxy_next_upstream_tries   2;
+        log_by_lua_file             './scripts/collect_stats.lua';#this directive must be placed as the last line
+    }
+    
+    ...
+    
+    upstream paopao_cms_api_callback_jy{
+        keepalive 4;
+        server xx.xx.xx.xx:80;
+        server xx.xx.xx.xx:80;
+    }
+    
+    upstream paopao_cms_api_jy{
+        keepalive 6;
+        server xx.xx.xx.xx:80;
+        server xx.xx.xx.xx:80;
+        server xx.xx.xx.xx:80;
+    }
+```
+
+5.  events: 搭建了独立于操作系统的事件处理机制的框架，及提供了各具体事件的处理。nginx具体使用何种事件处理模块，这依赖于具体的操作系统和编译选项。
+    
+```
+    events {
+        ##this attribute's value will be altered by setup or config script depending on project specific
+        worker_connections  1024;
+    }
+```
+
+指令上下文，可能有包含的情况出现。在一个上下文里，可能包含另外一种类型的上下文多次。例如：如果http服务，支持了多个虚拟主机，那么在http上下文里，就会出现多个server上下文。
+ 
 
 ## 参考文献:
 1. https://segmentfault.com/q/1010000000256516
@@ -21,3 +124,4 @@ nginx
 5. https://segmentfault.com/a/1190000003893430
 6. http://hopestar.github.io/2013/06/08/nginx-limit-moule-note/
 7. http://freeloda.blog.51cto.com/2033581/1288553
+8. https://github.com/cjl3080434008/2014/blob/master/read_book/nginx/%E6%B7%B1%E5%85%A5%E7%90%86%E8%A7%A3Nginx%E6%A8%A1%E5%9D%97%E5%BC%80%E5%8F%91%E5%8F%8A%E6%9E%B6%E6%9E%84%E8%A7%A3%E6%9E%90.pdf
