--- a/_posts/2017-3-22-BTrace.md
+++ b/_posts/2017-3-22-BTrace.md
@@ -8,7 +8,33 @@ excerpt: "introduction to btrace"
 ---
 ## 介绍
 
+## 安装
+
+1. 下载地址：https://github.com/btraceio/btrace/releases/download/v1.3.10.1/btrace-bin-1.3.10.1.tgz
+
+2. 解压缩，tar zxvf ./btrace-bin-1.3.10.1.tgz, 然后就可以正常使用了。
+
+## 应用
+
+##### 查看执行到某个方法入参
+1. 代码准备如下:
+
+```
+    import com.sun.btrace.annotations.*;
+    import static com.sun.btrace.BTraceUtils.*;
+    
+    @BTrace
+    public class ExecuteMonitor {
+        @OnMethod(clazz = "com.iqiyi.qx.comment.model.PanFeedIdMapModel",method = "addOneFeedId")
+        public static void traceExecute(String url, Long feedId){
+            println("hit args, url=" + url + " feedId="+ feedId);
+        }
+    
+    }
+```
+
+2. 使用./btracec ExecuteMonitor.java进行代码编译，之后执行./btrace $pid ExecuteMonitor.java即可（其中，$pid为java进程号）。
 
 ## 参考文献:
-
-1. 
+1. 花钱的年华：http://calvin1978.blogcn.com/articles/btrace1.html
+2. 官网：https://github.com/btraceio/btrace/releases/tag/v1.3.9
