--- a/_posts/2017-3-22-BTrace.md
+++ b/_posts/2017-3-22-BTrace.md
@@ -35,6 +35,32 @@ excerpt: "introduction to btrace"
 
 2. 使用./btracec ExecuteMonitor.java进行代码编译，之后执行./btrace $pid ExecuteMonitor.java即可（其中，$pid为java进程号）。
 
+##### 判断一个方法的哪些行是否被执行
+1. 代码如下：
+
+```
+import com.sun.btrace.annotations.*;
+import static com.sun.btrace.BTraceUtils.*;
+ 
+    @BTrace
+    public class PgcCircleMonitor {
+        @OnMethod(clazz = "com.iqiyi.qx.consumer.feed.PgcCircleInitConsumer$PgcCircleInitListener",
+                method = "onMessage",
+                location = @Location(value = Kind.LINE, line = 49))
+        public static void traceExecute49(){
+           println("call line 49");
+        }
+     
+     
+        @OnMethod(clazz = "com.iqiyi.qx.consumer.qipu.CircleInfoChangedConsumer",
+                method = "initPgcCircleFeed",
+                location = @Location(value = Kind.LINE, line = 134))
+        public static void traceExecute134(){
+            println("CircleInfoChangedConsumer call line 134");
+        }
+    }
+  ```
+
 ## 参考文献:
 1. 花钱的年华：http://calvin1978.blogcn.com/articles/btrace1.html
 2. 官网：https://github.com/btraceio/btrace/releases/tag/v1.3.9
